# FinAI

./: .gitignore  AGENTS.md  README.md  Spec.md
.agents/: hooks.json
.agents/scripts/: after_tool_use.py  before_tool_call.py
.agents/skills/sql-safety-guardian/: SKILL.md
.github/workflows/: deploy.yml
backend/: .gcloudignore  .gitignore  Dockerfile  README.md  agents-cli-manifest.yaml  pyproject.toml
backend/app/: __init__.py  auth.py  db.py  main.py  models.py
backend/app/agent/: graph.py  state.py  tools.py
backend/app/api/endpoints/: agent.py  expenses.py
backend/scripts/: clean_and_import.py  migrate_history.py  run_local.sh  seed_local_data.py
backend/tests/: conftest.py  test_auth.py
backend/tests/agent/: test_tools.py
frontend/: README.md
frontend/src/: App.css  App.tsx  index.css
