[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "fastapi>=0.139.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-genai>=2.10.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.20",
]
